refactoring + media tags (Need to finish)

--- a/template/css/content/main_page.css
+++ b/template/css/content/main_page.css
@@ -1,3 +1,5 @@
+/* Styles for main page */
+
 .content {
 	margin-top: 162px;
 	margin-left: 150px;
@@ -15,12 +17,12 @@
 
 .content__wrapper {
 	display: flex;
-	margin: -40px -40px;
+	margin: -35px -35px;
 	flex-wrap:wrap;
 
 }
 .content__element {
-	padding: 40px 40px;
+	padding: 35px 35px;
 	flex: 1 1 50%;
 }
 
@@ -84,3 +86,4 @@
 .pagination__btn:active {
 	background-color: #f5c763;
 }
+
