--- a/template/css/footer.css
+++ b/template/css/footer.css
@@ -1,3 +1,5 @@
+/* Styles for footer */
+
 .footer {
 	display: flex;
 	justify-content: space-between;
@@ -49,4 +51,14 @@
 .footer__social:last-child {
     margin-right: 150px;
 }
+
+
+@media screen and (max-width: 755px) { 
+	.footer__social:last-child {
+		margin-right: 10px;
+	}
+	.footer__privacy-elem:first-child {
+		margin-left: 10px;
+	}
+	}
 
