--- a/template/css/header.css
+++ b/template/css/header.css
@@ -1,3 +1,5 @@
+/* Styles for header */
+
 .header {
 	display: flex;
 	justify-content: space-between;
@@ -12,7 +14,6 @@
 .header__logo-img {
 	height: 23px;
 	width: 119px;
-	
 }
 
 .header__nav {
@@ -31,3 +32,43 @@
 	text-align: center;
 	text-transform: uppercase;
 }
+
+@media screen and (max-width: 755px) 
+	{ 
+	.header__logo{
+		margin-left: 0px;
+	}
+	.header__logo-img {
+		visibility: hidden;
+		margin-left: 0px;
+		
+	}
+	.header__nav {
+		width: 100%;
+		margin-right: 100px;
+	} 
+	.header__nav-elem {
+		font-size: 7px;
+		display: inline-flex;
+	}
+} 
+
+@media screen and (max-width: 500px) {
+	.header{
+		display: block;
+		margin-top: 0px;
+	}
+
+	.header__nav {
+		width: 500px;
+		background: rgb(228, 228, 228);
+		justify-content: space-around;
+		display: flex;
+		align-items: baseline;
+		padding-right: 30px;
+	
+	}
+
+}
+
+
