--- a/template/css/old-files-css/content/post_page.css
+++ b/template/css/old-files-css/content/post_page.css
@@ -22,7 +22,7 @@ h2{
     margin-left: 70px;
     margin-right: 70px;
 }
-.content__photos{
+.content-photos{
     max-width: 80%;
     max-height: 80%;
 }
@@ -34,7 +34,7 @@ h2{
 .content_subtitles{
     margin-top: 99px;
 }
-.content__text-italic{
+.content-text-italic{
     margin-top:  54px;
     margin-left:  7px;
     color: #626262;
@@ -45,7 +45,7 @@ h2{
     font-family: "Playfair Display - Italic";
     font-style: italic;
 }    
-.content__text{
+.content-text{
     margin-top: 20px;
     margin-right: 10%;
     margin-bottom: 117px;
@@ -67,11 +67,11 @@ h2{
     padding-bottom: 40px;
 }  
 
-.block-also-like__images{
+.block-also-like-images{
     display: flex;
     justify-content: space-around;
 }
-.block-also-like__images .content__img{
+.block-also-like-images .content-img{
     width: 100%;
     height: 100%;
 }
