--- a/template/css/old-files-css/header.css
+++ b/template/css/old-files-css/header.css
@@ -6,17 +6,17 @@
 	margin-top: 68px;
 	
 }
-.header__logo {
+.header-logo {
 	margin-left: 69px;
 }
 
 
-.header__logo-img {
+.header-logo-img {
 	height: 23px;
 	width: 119px;
 }
 
-.header__nav {
+.header-nav {
 	width: 500px;
 	justify-content: space-between;
 	display: flex;
@@ -24,7 +24,7 @@
 	margin-right: 68px;
 
 }
-.header__nav-elem {
+.header-nav-elem {
 	color: #626262;
 	font-family: "Playfair Display";
 	font-size: 14px;
@@ -35,19 +35,19 @@
 
 @media screen and (max-width: 755px) 
 	{ 
-	.header__logo{
+	.header-logo{
 		margin-left: 0px;
 	}
-	.header__logo-img {
+	.header-logo-img {
 		visibility: hidden;
 		margin-left: 0px;
 		
 	}
-	.header__nav {
+	.header-nav {
 		width: 100%;
 		margin-right: 100px;
 	} 
-	.header__nav-elem {
+	.header-nav-elem {
 		font-size: 7px;
 		display: inline-flex;
 	}
@@ -59,7 +59,7 @@
 		margin-top: 0px;
 	}
 
-	.header__nav {
+	.header-nav {
 		width: 500px;
 		background: rgb(228, 228, 228);
 		justify-content: space-around;
