--- a/template/css/style.css
+++ b/template/css/style.css
@@ -205,8 +205,11 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	border: 2px solid #b4ad9e;
 }
 
-.pagination-btn:active {
-	background-color: #f5c763;
+.pagination-btn-active {
+	width: 35px;
+	height: 35px;
+	background-color: #e55a62;
+	color: #ffffff;
 }
 
 
