--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,7 @@ h2{
 }
 .content-photos{
     max-width: 80%;
-    max-height: 80%;
+
 }
 
 .content-subtitles{
@@ -342,76 +342,25 @@ h2{
 
 }
 
+@media screen and (max-width: 1250px) {
 
-
-
-
-/* Styles for footer */
-
-.footer {
-	display: flex;
-	justify-content: space-between;
-	height: 98px;
-	width: 100%;
-	background-color: #f0f0f0;
-}
-.footer-privacy {
-	display: flex;
-	align-items: center;
-}
-
-.footer-privacy-elem{
-	color: #000;
-}
-.footer-privacy-elem:last-child{
-	margin-left: 17px;
-}
-.footer-privacy-elem:first-child {
-	margin-left: 150px;
-}
-
-
-.footer-social{
-	display: flex;
-	align-items: center;
-	
-}
-
-.footer-text{
-	width: 42px;
-	height: 12px;
-	color: #000000;
-	font-family: "Playfair Display";
-	font-size: 14px;
-	line-height: 24px;
-	margin-bottom: 10px;
-}
-
-.footer-social-img {
-	margin: 21px;
-}
-
-
-
-.footer-social:last-child {
-    margin-right: 150px;
-}
-
-@media screen and (max-width: 900px) {
-	.footer-privacy-elem:last-child{
-		margin-left: 5px;
+	.content-text{
+		margin: 7px;
 	}
-	.footer-privacy-elem:first-child {
-		margin-left: 15px;
-	}
-	.footer-social:last-child {
-		margin-right: 15px;
-	}
-	.footer-social-img {
-		margin: 5px;
+	.content-photos{
+		max-width: 40%;
+		
 	}
 
 }
+
+@media screen and (max-width: 700px) {
+	.content-text{
+		font-size: 12px;
+		margin: 3px;
+	}
+}
+
 
 
 /* Styles for comment form */
@@ -502,4 +451,101 @@ h2{
 .comment-input:focus::input-placeholder{
     color: while;
 }
+
+
+
+@media screen and (max-width: 1250px) {
+	.comment-input[placeholder]{
+		padding-left: 5px;
+	}
+	.comments {
+		max-width: 100%;
+		margin-left: 50px;
+		margin-right: 50px;
+	}
+	.comment-text {
+		font-size: 10px;
+	}
+
+}
+
+@media screen and (max-width: 700px) {
+	.comment-img {
+		display: none;
+	}
+	.comment-input[placeholder]{
+		text-align: center;
+		font-size: 10px;
+		padding-left: 6px;
+	}
+}
+
+
+/* Styles for footer */
+
+.footer {
+	display: flex;
+	justify-content: space-between;
+	height: 98px;
+	width: 100%;
+	background-color: #f0f0f0;
+}
+.footer-privacy {
+	display: flex;
+	align-items: center;
+}
+
+.footer-privacy-elem{
+	color: #000;
+}
+.footer-privacy-elem:last-child{
+	margin-left: 17px;
+}
+.footer-privacy-elem:first-child {
+	margin-left: 150px;
+}
+
+
+.footer-social{
+	display: flex;
+	align-items: center;
+	
+}
+
+.footer-text{
+	width: 42px;
+	height: 12px;
+	color: #000000;
+	font-family: "Playfair Display";
+	font-size: 14px;
+	line-height: 24px;
+	margin-bottom: 10px;
+}
+
+.footer-social-img {
+	margin: 21px;
+}
+
+
+
+.footer-social:last-child {
+    margin-right: 150px;
+}
+
+@media screen and (max-width: 900px) {
+	.footer-privacy-elem:last-child{
+		margin-left: 5px;
+	}
+	.footer-privacy-elem:first-child {
+		margin-left: 15px;
+	}
+	.footer-social:last-child {
+		margin-right: 15px;
+	}
+	.footer-social-img {
+		margin: 5px;
+	}
+
+}
+
 
